k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - "<YOUR_DOMAIN_OR_PUBLIC_IP>"
      secretName: wisecow-tls
  rules:
    - host: "<YOUR_DOMAIN_OR_PUBLIC_IP>"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wisecow
                port:
                  number: 4499
